<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_add_admin"
            android:icon="@drawable/newuser"
            android:title="@string/menu_add_admin" />
        <item
            android:id="@+id/nav_view_offers"
            android:icon="@drawable/shoppinlist"
            android:title="@string/menu_view_offers" />
        <item
            android:id="@+id/nav_add_offers"
            android:icon="@drawable/discount"
            android:title="@string/menu_addspecialoffers" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/report"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>